# ingestao_pipeline

./: .gitignore  Cargo.toml  Dockerfile  participante.json  requirements.txt
src/: main.py  main.rs
